<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time"
        android:paddingStart="@dimen/_11sdp"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/white"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/txt_Score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_80sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:text="@string/num1_num2"
        android:textColor="@color/white"
        android:textSize="@dimen/_23sdp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:layout_centerHorizontal="true"
        android:text="@string/num3"
        android:textColor="@color/white"
        android:textSize="@dimen/_23sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <ImageButton
            android:id="@+id/txt_correct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/svg_check"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/right" />

        <ImageButton
            android:id="@+id/txt_wrong"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/svg_clear_icon"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/wrong" />

    </LinearLayout>
</RelativeLayout>