<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/back_button"
        android:onClick="onBackClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/svg_back_icon"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        tools:ignore="ContentDescription,OnClick,UsingOnClickInXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200sdp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingBottom="20dp"-->
<!--            android:text="@string/txt_title"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="50sp" />-->

        <TextView
            android:id="@+id/txt_final_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_15sdp"
            android:text="@string/total_score"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:id="@+id/txt_total_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_15sdp"
            android:text="@string/total_questions_attempted"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:id="@+id/txt_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_15sdp"
            android:text="@string/right_questions"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:id="@+id/txt_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_15sdp"
            android:text="@string/wrong_questions"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:src="@drawable/svg_share"
            tools:ignore="ContentDescription,InefficientWeight,OnClick,UsingOnClickInXml" />
    </LinearLayout>

</RelativeLayout>